--- a/detalhe.html
+++ b/detalhe.html
@@ -1,65 +1,298 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detalhe de Animal</title>
-     <link
+    <link rel="stylesheet" href="style/style.css" />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
-</head>
-<body>
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar px-4 px-lg-5 bg-white border-bottom shadow-sm">
+      <div
+        class="container-fluid px-lg-4 d-flex justify-content-between align-items-center"
+      >
+        <!-- Logo -->
+        <a class="navbar-brand" href="index.html">
+          <img src="img/logoRoxa.svg" alt="Logo" width="50" />
+        </a>
 
-    <div class="container mt-4" >
-    <h2 class="text-center fw-bold mb-4" style="color: #7874A4">Achou o seu novo companheiro???</h2>
+        <!-- Tela Admin + Minha Conta -->
+        <div class="d-none d-lg-flex align-items-center">
+          <button class="btn text-muted">Tela Admin</button>
+          <div class="vr mx-2 d-none d-md-block"></div>
+          <button
+            class="btn btn-conta bg-purple text-white fw-medium rounded-pill px-3 py-1"
+          >
+            <img src="img/icons/user.svg" alt="User" width="22" /> Minha Conta
+          </button>
+        </div>
 
-    <img src="/img/cachorros/pinpão.png" alt="pinpão" class="shadow mb-5" style= "width:100%; max-width: 1300px;">
+        <!-- Botão Offcanvas -->
+        <button
+          class="navbar-toggler d-lg-none d-flex"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
 
-    <div class="row mt-4" style="color: #7874A4">
-      <div class="col-md-6">
-            <div class="bg-white p-4 rounded shadow-sm">
-                <h5 class="mb-2">Pinpão</h5>
-                <p><strong>Labrador | Guabiruba | 4 Meses</strong> </p>
-                <hr><p><strong>Tipo:</strong> Filhote de cachorro - Macho - Médio - Amarelo / Castanho</p><hr>
-                <p><strong>Sobre</strong><br> Vacinação em dia.</p>
+    <!-- Menu Navbar com Offcanvas -->
+    <nav class="navbar navbar-expand-lg bg-purple">
+      <div class="container-fluid px-4">
+        <!-- Menu em telas grandes -->
+        <div
+          class="collapse navbar-collapse justify-content-center d-none d-lg-flex"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item px-2">
+              <a
+                class="text-white fw-medium text-decoration-none nav-link"
+                href="catalogo.html"
+                >Adote ou Colabore</a
+              >
+            </li>
+            <li class="nav-item px-2">
+              <a
+                class="text-white fw-medium text-decoration-none nav-link"
+                href="catalogo.html"
+                >Cachorros</a
+              >
+            </li>
+            <li class="nav-item px-2">
+              <a
+                class="text-white fw-medium text-decoration-none nav-link"
+                href="catalogo.html"
+                >Gatos e Utilitários</a
+              >
+            </li>
+            <li class="nav-item px-2">
+              <a
+                class="text-white fw-medium text-decoration-none nav-link"
+                href="catalogo.html"
+                >Outros tipos de PET</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Offcanvas Mobile Menu -->
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title">Menu</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Fechar"
+        ></button>
+      </div>
+      <div class="offcanvas-body d-flex flex-column">
+        <ul class="navbar-nav text-black">
+          <li class="nav-item px-2">
+            <a class="nav-link" href="catalogo.html">Adote ou Colabore</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="catalogo.html">Cachorros</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="catalogo.html">Gatos e Utilitários</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="catalogo.html">Outros tipos de PET</a>
+          </li>
+        </ul>
+        <div
+          class="mt-auto d-flex justify-content-center align-items-center pt-4"
+        >
+          <button class="btn text-muted">Tela Admin</button>
+          <button
+            class="btn btn-conta bg-purple text-white fw-medium rounded-pill px-3 py-1"
+          >
+            <img src="img/icons/user.svg" alt="User" width="22" /> Minha Conta
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container mt-4">
+      <h2 class="text-center fw-bold mb-4" style="color: #7874a4">
+        Achou o seu novo companheiro???
+      </h2>
+
+      <img
+        src="/img/cachorros/pinpão.png"
+        alt="pinpão"
+        class="shadow mb-5"
+        style="width: 100%; max-width: 1300px"
+      />
+
+      <div class="row mt-4" style="color: #7874a4">
+        <div class="col-md-6">
+          <div class="bg-white p-4 rounded shadow-sm">
+            <h5 class="mb-2">Pinpão</h5>
+            <p><strong>Labrador | Guabiruba | 4 Meses</strong></p>
+            <hr />
+            <p>
+              <strong>Tipo:</strong> Filhote de cachorro - Macho - Médio -
+              Amarelo / Castanho
+            </p>
+            <hr />
+            <p>
+              <strong>Sobre</strong><br />
+              Vacinação em dia.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div
+            class="info-card bg-purple text-white text-center bg-roxo-suave p-4 rounded shadow-sm"
+            style="background-color: #7874a4"
+          >
+            <h5 class="text-white">Considerando Pinpão para adoção?</h5>
+            <a
+              href="#"
+              class="btn btn-light mt-2"
+              style="
+                width: 100%;
+                max-width: 240px;
+                border-radius: 20px;
+                color: #7874a4;
+              "
+              ><strong>Formulário de Adoção</strong></a
+            ><br />
+            <a
+              href="#"
+              class="btn btn-light mt-2 text-white"
+              style="
+                width: 100%;
+                max-width: 240px;
+                border-radius: 20px;
+                background-color: #555086;
+              "
+              >Leia as Perguntas Frequentes</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="row mt-4">
+        <div class="col-md-6">
+          <div class="footer-box">
+            <img src="/img/como-faco-pra-adotar.png" class="d-block mx-auto" />
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="info-card text-center bg-white p-4 rounded shadow-sm">
+            <img
+              src="/img/icon-endereco.png"
+              class="d-block mx-auto mb-3"
+              style="width: 100%; max-width: 130px"
+              alt=""
+            />
+            <h6 style="color: #555086">
+              <strong>R. Alberto Reichert, 237 - Aimoré</strong>
+            </h6>
+            <p style="color: #555086">Guabiruba | SC</p>
+            <hr />
+            <p><span class="paw-icon">📍</span> Localização Endereço</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="text-white py-5 bg-purple">
+      <div class="container">
+        <div class="row text-center text-md-start">
+          <!-- Logo -->
+          <div
+            class="col-md-3 mb-4 mb-md-0 d-flex flex-column align-items-md-start align-items-center"
+          >
+            <div
+              class="bg-white rounded p-1 d-flex justify-content-center"
+              style="width: 80px; height: 80px"
+            >
+              <img
+                src="img/logoRoxa.svg"
+                alt="Logo ACAPRA"
+                style="max-width: 100%; max-height: 100%"
+              />
             </div>
-        </div>
-      <div class="col-md-6" >
-        <div class="info-card bg-purple text-white text-center bg-roxo-suave p-4 rounded shadow-sm" style="background-color: #7874A4;">
-          <h5 class="text-white">Considerando Pinpão para adoção?</h5>
-          <a href="#" class="btn btn-light mt-2" style= "width:100%; max-width: 240px; border-radius: 20px; color: #7874A4"><strong>Formulário de Adoção</strong></a><br>
-          <a href="#" class="btn btn-light mt-2 text-white" style= "width:100%; max-width: 240px; border-radius: 20px; background-color: #555086;" >Leia as Perguntas Frequentes</a>
-        </div>
-      </div>
-    </div>
+          </div>
 
-    <div class="row mt-4">
-      <div class="col-md-6">
-        <div class="footer-box">
-            <img src="/img/como-faco-pra-adotar.png" class="d-block mx-auto">
-        </div>
-      </div>
+          <!-- Cadastro -->
+          <div class="col-md-3">
+            <h6 class="fw-bold">Cadastre-se</h6>
+            <p class="mb-1">
+              Faça parte da família<br /><strong>ACAPRA</strong> e colabore!
+            </p>
+            <a href="#" class="btn btn-light btn-sm px-4 mt-2 rounded-pill"
+              >Inscrever-se</a
+            >
+          </div>
 
-      <div class="col-md-6">
-        <div class="info-card text-center bg-white p-4 rounded shadow-sm">
-          <img src="/img/icon-endereco.png" class="d-block mx-auto mb-3" style= "width:100%; max-width: 130px;"alt="">
-          <h6 style="color: #555086"><strong>R. Alberto Reichert, 237 - Aimoré</strong></h6>
-          <p style="color: #555086">Guabiruba | SC</p>
-          <hr>
-          <p><span class="paw-icon" >📍</span> Localização Endereço</p>
+          <!-- Sobre nós -->
+          <div class="col-md-3 mt-3 mt-md-0">
+            <h6 class="fw-bold">Sobre nós</h6>
+            <ul class="list-unstyled">
+              <li>
+                <a href="#" class="text-white text-decoration-none">ACAPRA</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Contato -->
+          <div class="col-md-3">
+            <h6 class="fw-bold">Contato</h6>
+            <ul class="list-unstyled">
+              <li>
+                <a
+                  href="tel:+5547999999999"
+                  class="text-white text-decoration-none"
+                  ><strong>(47)</strong> 99999-9999</a
+                >
+              </li>
+              <li>
+                <a
+                  href="mailto:acaprabrusquese@gmail.com"
+                  class="text-white text-decoration-none"
+                  >acaprabrusque@gmail.com</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Linha divisória -->
+        <hr class="border-white mt-4 mb-3" />
+
+        <!-- Redes sociais -->
+        <div class="d-flex justify-content-center gap-4">
+          <a href="#" class="text-white fs-5"><i class="bi bi-whatsapp"></i></a>
+          <a href="#" class="text-white fs-5"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="text-white fs-5"
+            ><i class="bi bi-instagram"></i
+          ></a>
         </div>
       </div>
-    </div>
-  </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-
-</body>
+  </body>
 </html>
