--- a/catalogo.html
+++ b/catalogo.html
@@ -126,12 +126,12 @@
       </div>
     </div>
 
-    <div class="container-fluid mt-4">
+    <div class="container-fluid my-5">
       <div class="row">
         <!-- Filtros -->
-        <div class="col-md-2">
+        <div class="col-11 col-sm-4 col-lg-3">
           <div class="filters text-center">
-            <img src="/img/icons/icon-busca.png" class="mb-2" />
+            <img src="img/icons/icon-busca.png" class="mb-2" />
 
             <p><strong>Encontre o seu melhor par:</strong></p>
             <hr />
@@ -369,7 +369,7 @@
         </div>
 
         <!-- Cards de pets -->
-        <div class="col-md-10">
+        <div class="col-11 col-sm-8 col-lg-9">
           <div class="d-flex justify-content-end mb-3">
             <div class="dropdown sorter">
               <button
@@ -388,12 +388,12 @@
           </div>
           <div class="row g-3">
             <!-- Bloco Pet -->
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6 col-sm-4 col-md-3">
               <div class="card pet-card">
                 <img
-                  src="/img/cachorros/cachorro-pinpao.png"
+                  src="img/cachorros/cachorro-pinpao.png"
                   class="card-img-top"
-                  style="width: 100%; max-width: 400px"
+                  style="width: 100%"
                   alt="Pinpão"
                 />
                 <div class="card-body">
@@ -404,12 +404,12 @@
               </div>
             </div>
 
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6 col-sm-4 col-md-3">
               <div class="card pet-card">
                 <img
-                  src="/img/cachorros/cachorro-bela.png"
+                  src="img/cachorros/cachorro-bela.png"
                   class="card-img-top"
-                  style="width: 100%; width: 210px"
+                  style="width: 100%"
                   alt="Bela"
                 />
                 <div class="card-body">
@@ -420,12 +420,12 @@
               </div>
             </div>
 
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6 col-sm-4 col-md-3">
               <div class="card pet-card">
                 <img
-                  src="/img/cachorros/cachorro-zeus.png"
+                  src="img/cachorros/cachorro-zeus.png"
                   class="card-img-top"
-                  style="width: 100%; width: 220px"
+                  style="width: 100%"
                   alt="Zeus"
                 />
                 <div class="card-body">
@@ -436,12 +436,12 @@
               </div>
             </div>
 
-            <div class="col-6 col-sm-4 col-md-2">
+            <div class="col-6 col-sm-4 col-md-3">
               <div class="card pet-card">
                 <img
-                  src="/img/cachorros/cachorro-leandro.png"
+                  src="img/cachorros/cachorro-leandro.png"
                   class="card-img-top"
-                  style="width: 100%; width: 210px"
+                  style="width: 100%"
                   alt="Leandro"
                 />
                 <div class="card-body">
