--- a/catalogo.html
+++ b/catalogo.html
@@ -127,7 +127,7 @@
     </div>
 
     <div class="container-fluid my-5">
-      <div class="row">
+      <div class="row d-flex justify-content-center">
         <!-- Filtros -->
         <div class="col-11 col-sm-4 col-lg-3">
           <div class="filters text-center">
